--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "history": "4.7.2",
     "html-webpack-plugin": "2.30.1",
     "incstr": "1.2.3",
+    "joi-browser": "13.0.1",
     "koa": "2.4.1",
     "koa-bodyparser": "4.2.0",
     "koa-hbs": "1.0.0",
