--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "babel-eslint": "8.0.2",
     "babel-loader": "7.1.2",
     "babel-plugin-react-css-modules": "3.3.2",
+    "babel-plugin-syntax-dynamic-import": "6.18.0",
+    "babel-plugin-transform-class-properties": "6.24.1",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
@@ -79,7 +81,7 @@
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-react": "7.4.0",
     "npm-run-all": "4.1.2",
-    "postcss-loader": "2.0.8",
+    "postcss-loader": "2.0.9",
     "prettier-eslint-cli": "4.4.0",
     "style-loader": "0.19.0",
     "stylelint": "8.2.0",
