--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test": "run-s test:**",
     "test:server": "eslint ./src/server",
     "test:client": "eslint  --ext js --ext jsx ./src/client",
-    "development": "NODE_ENV=development nodemon --watch src/server --watch src/client/webpack.dev.config.js src/server/app.js"
+    "test:lint-styles": "stylelint \"src/client/**/*.pcss\"",
+    "development": "NODE_ENV=development nodemon --watch src/server --watch src/client/webpack.dev.config.js src/server/app.js",
+    "format": "prettier-eslint --write \"src/**/*.?(js|jsx)\""
   },
   "dependencies": {
     "@paralect/common-logger": "0.1.10",
@@ -31,15 +33,15 @@
     "handlebars": "4.0.11",
     "history": "4.7.2",
     "html-webpack-plugin": "2.30.1",
-    "incstr": "1.2.1",
+    "incstr": "1.2.3",
     "koa": "2.4.1",
     "koa-bodyparser": "4.2.0",
     "koa-hbs": "1.0.0",
     "koa-logger": "3.1.0",
     "koa-mount": "3.0.0",
-    "koa-router": "7.2.1",
-    "koa-static": "4.0.1",
-    "koa-views": "6.1.1",
+    "koa-router": "7.3.0",
+    "koa-static": "4.0.2",
+    "koa-views": "6.1.2",
     "koa-webpack": "1.0.0",
     "lodash": "4.17.4",
     "nodemon": "1.12.1",
@@ -47,9 +49,9 @@
     "postcss-cssnext": "3.0.2",
     "postcss-import": "11.0.0",
     "prop-types": "15.6.0",
-    "react": "16.1.0",
-    "react-dom": "16.1.0",
-    "react-hot-loader": "3.1.2",
+    "react": "16.1.1",
+    "react-dom": "16.1.1",
+    "react-hot-loader": "3.1.3",
     "react-icons": "2.2.7",
     "react-loadable": "5.3.1",
     "react-redux": "5.0.6",
@@ -66,9 +68,9 @@
     "babel-loader": "7.1.2",
     "babel-plugin-react-css-modules": "3.3.2",
     "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
-    "babel-preset-env": "1.6.1",
     "css-loader": "0.28.7",
     "eslint": "4.11.0",
     "eslint-plugin-import": "2.8.0",
@@ -76,9 +78,12 @@
     "eslint-plugin-react": "7.4.0",
     "npm-run-all": "4.1.2",
     "postcss-loader": "2.0.8",
+    "prettier-eslint-cli": "4.4.0",
     "style-loader": "0.19.0",
+    "stylelint": "8.2.0",
+    "stylelint-config-standard": "17.0.0",
     "url-loader": "0.6.2",
-    "webpack-dev-middleware": "1.12.0",
+    "webpack-dev-middleware": "1.12.1",
     "webpack-hot-middleware": "2.20.0"
   },
   "repository": {
