[+] Profile: add ability to edit profile info

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,10 @@
 version: '3.3'  
 services:
+  redis:
+    command: redis
+    image: redis:4.0
+    ports:
+      - "6379:6379" # map port to none standard port, to avoid conflicts with locally installed redis.
   web:
     build:
       context: "./"
