--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@paralect/common-logger": "0.1.10",
     "@paralect/node-mongo": "0.3.0",
     "app-module-path": "2.2.0",
+    "axios": "0.17.1",
     "classnames": "2.2.5",
     "cssnano": "3.10.0",
     "extract-text-webpack-plugin": "3.0.2",
@@ -35,11 +36,14 @@
     "html-webpack-plugin": "2.30.1",
     "incstr": "1.2.3",
     "joi-browser": "13.0.1",
+    "jsonwebtoken": "8.1.0",
     "koa": "2.4.1",
     "koa-bodyparser": "4.2.0",
+    "koa-generic-session": "2.0.0",
     "koa-hbs": "1.0.0",
     "koa-logger": "3.1.0",
     "koa-mount": "3.0.0",
+    "koa-redis": "3.1.1",
     "koa-router": "7.3.0",
     "koa-static": "4.0.2",
     "koa-views": "6.1.2",
@@ -76,16 +80,16 @@
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "css-loader": "0.28.7",
-    "eslint": "4.11.0",
+    "eslint": "4.12.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
-    "eslint-plugin-react": "7.4.0",
+    "eslint-plugin-react": "7.5.1",
     "npm-run-all": "4.1.2",
     "postcss-loader": "2.0.9",
     "prettier-eslint-cli": "4.4.0",
     "style-loader": "0.19.0",
-    "stylelint": "8.2.0",
-    "stylelint-config-standard": "17.0.0",
+    "stylelint": "8.3.0",
+    "stylelint-config-standard": "18.0.0",
     "url-loader": "0.6.2",
     "webpack-dev-middleware": "1.12.1",
     "webpack-hot-middleware": "2.20.0"
