--- a/.babelrc
+++ b/.babelrc
@@ -13,6 +13,7 @@
     "react"
   ],
   "plugins": [
-    "react-hot-loader/babel"
+    "react-hot-loader/babel",
+    "react-loadable/babel"
   ]
 }
