--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-starter",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "Koa react",
   "private": false,
   "main": "src/server/app.js",
@@ -20,7 +20,9 @@
     "test:client": "eslint  --ext js --ext jsx ./src/client",
     "test:lint-styles": "stylelint \"src/client/**/*.pcss\"",
     "development": "NODE_ENV=development nodemon --watch src/server --watch src/client/webpack.dev.config.js src/server/app.js",
-    "format": "prettier-eslint --write \"src/**/*.?(js|jsx)\""
+    "format": "prettier-eslint --write \"src/**/*.?(js|jsx)\"",
+    "add-contributor": "all-contributors add",
+    "generate-contributors": "all-contributors generate"
   },
   "dependencies": {
     "@paralect/common-logger": "0.1.10",
@@ -44,12 +46,12 @@
     "koa-logger": "3.1.0",
     "koa-mount": "3.0.0",
     "koa-redis": "3.1.2",
-    "koa-router": "7.3.0",
+    "koa-router": "7.4.0",
     "koa-static": "4.0.2",
     "koa-views": "6.1.3",
     "koa-webpack": "2.0.3",
     "lodash": "4.17.4",
-    "nodemon": "1.14.11",
+    "nodemon": "1.14.12",
     "normalize.css": "7.0.0",
     "postcss-cssnext": "3.1.0",
     "postcss-import": "11.0.0",
@@ -61,7 +63,7 @@
     "react-loadable": "5.3.1",
     "react-redux": "5.0.6",
     "react-router-dom": "4.2.2",
-    "react-router-redux": "5.0.0-alpha.8",
+    "react-router-redux": "5.0.0-alpha.9",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
     "uuid": "3.2.1",
@@ -69,6 +71,7 @@
   },
   "devDependencies": {
     "@paralect/eslint-config": "0.1.5",
+    "all-contributors-cli": "4.10.1",
     "babel-core": "6.26.0",
     "babel-eslint": "8.2.1",
     "babel-loader": "7.1.2",
@@ -83,9 +86,9 @@
     "eslint": "4.16.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.6.0",
+    "eslint-plugin-react": "7.6.1",
     "npm-run-all": "4.1.2",
-    "postcss-loader": "2.0.10",
+    "postcss-loader": "2.1.0",
     "prettier-eslint-cli": "4.7.0",
     "style-loader": "0.20.1",
     "stylelint": "8.4.0",
