--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,9 +1,11 @@
-FROM node:8.9
+FROM node:8.9.4
 
-EXPOSE 3000
+EXPOSE 3002 8081
 COPY ["./package.json", "./package-lock.json", "./.eslintrc.js", "./.eslintignore", "./.babelrc", "./browserslist", "./.stylelintrc", "/app/"]
 
 WORKDIR /app
+
+VOLUME "/app/src"
 
 RUN npm i --quiet
 
