[*] Fix hmr host

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - redis
     environment:
       NODE_ENV: development
+      HRM_HOST: "0.0.0.0"
     ports:
       - "3002:3002"
       - "8081:8081"
