--- a/.babelrc
+++ b/.babelrc
@@ -14,7 +14,24 @@
   ],
   "plugins": [
     "react-hot-loader/babel",
-    "react-loadable/babel"
+    "react-loadable/babel",
+    [
+      "module-resolver", {
+        "root": ["./src/client"]
+      }
+    ],
+    [
+      "inline-react-svg",
+      {
+        "svgo": {
+          "plugins": [
+            {
+              "cleanupIDs": false
+            }
+          ]
+        }
+      }
+    ]
   ],
   "retainLines": true
 }
