--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     // Enable/disable JavaScript validation. (For Flow)
     "javascript.validate.enable": false,
     // Use 'prettier-eslint' instead of 'prettier'. Other settings will only be fallbacks in case they could not be inferred from eslint rules.
-    "prettier.eslintIntegration": true
+    "prettier.eslintIntegration": true,
+    "editor.tabSize": 2
 }
