--- a/package.json
+++ b/package.json
@@ -33,51 +33,52 @@
     "@paralect/common-logger": "0.1.10",
     "app-module-path": "2.2.0",
     "axios": "0.18.0",
-    "classnames": "2.2.5",
+    "classnames": "2.2.6",
+    "connected-react-router": "4.3.0",
     "cssnano": "3.10.0",
     "file-loader": "1.1.11",
-    "flow-bin": "0.73.0",
+    "flow-bin": "0.75.0",
     "handlebars": "4.0.11",
     "history": "4.7.2",
     "html-webpack-plugin": "3.2.0",
     "incstr": "1.2.3",
-    "joi-browser": "13.0.1",
-    "jsonwebtoken": "8.2.1",
+    "joi-browser": "13.4.0",
+    "jsonwebtoken": "8.3.0",
     "koa": "2.5.1",
     "koa-generic-session": "2.0.1",
     "koa-logger": "3.2.0",
     "koa-mount": "3.0.0",
     "koa-redis": "3.1.2",
     "koa-router": "7.4.0",
-    "koa-static": "4.0.3",
+    "koa-static": "5.0.0",
     "koa-views": "6.1.4",
-    "koa-webpack": "4.0.0",
+    "koa-webpack": "5.0.2",
     "lodash": "4.17.10",
     "nodemon": "1.17.5",
     "normalize.css": "8.0.0",
     "postcss-cssnext": "3.1.0",
     "postcss-import": "11.1.0",
     "postcss-nested": "3.0.0",
-    "react": "16.4.0",
-    "react-dom": "16.4.0",
-    "react-hot-loader": "4.2.0",
+    "react": "16.4.1",
+    "react-dom": "16.4.1",
+    "react-hot-loader": "4.3.3",
     "react-icon-base": "2.1.2",
     "react-icons": "2.2.7",
     "react-loadable": "5.4.0",
     "react-redux": "5.0.7",
-    "react-router-dom": "4.2.2",
-    "react-router-redux": "5.0.0-alpha.9",
+    "react-router-dom": "4.3.1",
     "redux": "4.0.0",
-    "redux-thunk": "2.2.0",
+    "redux-thunk": "2.3.0",
     "uuid": "3.2.1",
-    "webpack": "4.9.1",
-    "webpack-cli": "2.1.4"
+    "webpack": "4.12.1",
+    "webpack-cli": "3.0.8",
+    "yup": "0.25.1"
   },
   "devDependencies": {
     "@paralect/eslint-config": "0.1.5",
-    "all-contributors-cli": "4.11.1",
+    "all-contributors-cli": "5.2.0",
     "babel-core": "6.26.3",
-    "babel-eslint": "8.2.3",
+    "babel-eslint": "8.2.5",
     "babel-loader": "7.1.4",
     "babel-plugin-inline-react-svg": "0.5.2",
     "babel-plugin-module-resolver": "3.1.1",
@@ -91,17 +92,17 @@
     "babel-preset-stage-2": "6.24.1",
     "css-loader": "0.28.11",
     "eslint": "4.19.1",
-    "eslint-plugin-flowtype": "2.47.1",
+    "eslint-plugin-flowtype": "2.49.3",
     "eslint-plugin-import": "2.12.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.8.2",
+    "eslint-plugin-react": "7.9.1",
     "flow": "0.2.3",
     "mini-css-extract-plugin": "0.4.0",
     "npm-run-all": "4.1.3",
     "postcss-loader": "2.1.5",
     "prettier-eslint-cli": "4.7.1",
     "style-loader": "0.21.0",
-    "stylelint": "9.2.1",
+    "stylelint": "9.3.0",
     "stylelint-config-standard": "18.2.0",
     "url-loader": "1.0.1"
   },
