--- a/package.json
+++ b/package.json
@@ -34,77 +34,78 @@
     "app-module-path": "2.2.0",
     "axios": "0.18.0",
     "classnames": "2.2.6",
-    "connected-react-router": "4.4.1",
+    "connected-react-router": "6.3.2",
     "cssnano": "4.1.10",
-    "file-loader": "2.0.0",
+    "file-loader": "3.0.1",
     "flow-bin": "0.81.0",
     "handlebars": "4.1.1",
-    "history": "4.7.2",
+    "history": "4.9.0",
     "html-webpack-plugin": "3.2.0",
     "incstr": "1.2.3",
-    "jsonwebtoken": "8.3.0",
-    "koa": "2.5.3",
+    "jsonwebtoken": "8.5.1",
+    "koa": "2.7.0",
     "koa-generic-session": "2.0.1",
     "koa-logger": "3.2.0",
-    "koa-mount": "3.0.0",
-    "koa-redis": "3.1.2",
+    "koa-mount": "4.0.0",
+    "koa-redis": "3.1.3",
     "koa-router": "7.4.0",
     "koa-static": "5.0.0",
-    "koa-views": "6.1.4",
-    "koa-webpack": "5.1.0",
+    "koa-views": "6.2.0",
+    "koa-webpack": "5.2.2",
     "lodash": "4.17.11",
-    "nodemon": "1.18.4",
-    "normalize.css": "8.0.0",
-    "postcss-import": "12.0.0",
-    "postcss-nested": "4.1.0",
-    "postcss-preset-env": "5.3.0",
-    "react": "16.5.1",
-    "react-dom": "16.5.1",
-    "react-hot-loader": "4.3.8",
+    "nodemon": "1.18.10",
+    "normalize.css": "8.0.1",
+    "postcss-import": "12.0.1",
+    "postcss-nested": "4.1.2",
+    "postcss-preset-env": "6.6.0",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-hot-loader": "4.8.3",
     "react-icon-base": "2.1.2",
-    "react-icons": "3.0.5",
+    "react-icons": "3.5.0",
     "react-loadable": "5.5.0",
-    "react-redux": "5.0.7",
-    "react-router-dom": "4.3.1",
-    "redux": "4.0.0",
+    "react-redux": "6.0.1",
+    "react-router": "4.3.1",
+    "react-router-dom": "5.0.0",
+    "redux": "4.0.1",
     "redux-thunk": "2.3.0",
     "uuid": "3.3.2",
-    "webpack": "4.19.0",
-    "webpack-cli": "3.1.0",
-    "yup": "0.26.5"
+    "webpack": "4.28.4",
+    "webpack-cli": "3.3.0",
+    "yup": "0.27.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.0.0",
-    "@babel/core": "7.0.1",
-    "@babel/plugin-proposal-class-properties": "7.0.0",
-    "@babel/plugin-proposal-export-namespace-from": "7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "7.0.0",
-    "@babel/polyfill": "7.0.0",
-    "@babel/preset-env": "7.0.0",
+    "@babel/cli": "7.4.3",
+    "@babel/core": "7.4.3",
+    "@babel/plugin-proposal-class-properties": "7.4.0",
+    "@babel/plugin-proposal-export-namespace-from": "7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@babel/polyfill": "7.4.3",
+    "@babel/preset-env": "7.4.3",
     "@babel/preset-flow": "7.0.0",
     "@babel/preset-react": "7.0.0",
     "@paralect/eslint-config": "1.0.0",
-    "all-contributors-cli": "5.4.0",
+    "all-contributors-cli": "6.2.0",
     "babel-eslint": "9.0.0",
-    "babel-loader": "8.0.2",
-    "babel-plugin-inline-react-svg": "0.5.4",
-    "babel-plugin-module-resolver": "3.1.1",
-    "babel-plugin-react-css-modules": "3.4.2",
-    "css-loader": "1.0.0",
+    "babel-loader": "8.0.5",
+    "babel-plugin-inline-react-svg": "1.1.0",
+    "babel-plugin-module-resolver": "3.2.0",
+    "babel-plugin-react-css-modules": "5.2.4",
+    "css-loader": "2.1.1",
     "eslint": "5.3.0",
     "eslint-plugin-flowtype": "2.50.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-react": "7.11.0",
     "flow": "0.2.3",
-    "mini-css-extract-plugin": "0.4.2",
-    "npm-run-all": "4.1.3",
+    "mini-css-extract-plugin": "0.5.0",
+    "npm-run-all": "4.1.5",
     "postcss-loader": "3.0.0",
     "prettier-eslint-cli": "4.7.1",
-    "style-loader": "0.23.0",
+    "style-loader": "0.23.1",
     "stylelint": "9.10.1",
     "stylelint-config-standard": "18.2.0",
-    "url-loader": "1.1.1"
+    "url-loader": "1.1.2"
   },
   "repository": {
     "type": "git",
