--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@paralect/common-logger": "0.1.10",
+    "acorn": "6.1.1",
     "app-module-path": "2.2.0",
     "axios": "0.18.0",
     "classnames": "2.2.6",
@@ -92,11 +93,11 @@
     "babel-plugin-module-resolver": "3.2.0",
     "babel-plugin-react-css-modules": "5.2.4",
     "css-loader": "2.1.1",
-    "eslint": "5.3.0",
-    "eslint-plugin-flowtype": "2.50.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-react": "7.11.0",
+    "eslint": "5.16.0",
+    "eslint-plugin-flowtype": "3.6.1",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-react": "7.12.4",
     "flow": "0.2.3",
     "mini-css-extract-plugin": "0.5.0",
     "npm-run-all": "4.1.5",
