--- a/package.json
+++ b/package.json
@@ -19,13 +19,8 @@
     "test:server": "eslint ./src/server",
     "test:client": "eslint  --ext js --ext jsx ./src/client",
     "test:lint-styles": "stylelint \"src/client/**/*.pcss\"",
-    "test:flow": "flow check",
     "development": "nodemon --watch src/server --watch src/client/webpack.dev.config.js src/server/app.js",
     "format": "prettier-eslint --write \"src/**/*.?(js|jsx)\"",
-    "flow:start": "flow start",
-    "flow:stop": "flow stop",
-    "flow:status": "flow status",
-    "flow:coverage": "flow coverage",
     "add-contributor": "all-contributors add",
     "generate-contributors": "all-contributors generate"
   },
@@ -37,7 +32,6 @@
     "connected-react-router": "6.5.0",
     "cssnano": "4.1.10",
     "file-loader": "4.0.0",
-    "flow-bin": "0.81.0",
     "handlebars": "4.1.2",
     "history": "4.9.0",
     "html-webpack-plugin": "3.2.0",
@@ -58,6 +52,7 @@
     "postcss-import": "12.0.1",
     "postcss-nested": "4.1.2",
     "postcss-preset-env": "6.6.0",
+    "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-hot-loader": "4.12.3",
@@ -81,7 +76,6 @@
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/polyfill": "7.4.4",
     "@babel/preset-env": "7.5.0",
-    "@babel/preset-flow": "7.0.0",
     "@babel/preset-react": "7.0.0",
     "@paralect/eslint-config": "1.1.0",
     "all-contributors-cli": "6.7.0",
@@ -92,11 +86,9 @@
     "babel-plugin-react-css-modules": "5.2.6",
     "css-loader": "3.0.0",
     "eslint": "6.0.1",
-    "eslint-plugin-flowtype": "3.11.1",
     "eslint-plugin-import": "2.18.0",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.14.2",
-    "flow": "0.2.3",
     "mini-css-extract-plugin": "0.7.0",
     "npm-run-all": "4.1.5",
     "postcss-loader": "3.0.0",
