--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     networks:
       - ship
     environment:
-      NODE_ENV: development
+      APP_ENV: development
       HRM_HOST: "0.0.0.0"
     ports:
       - "3002:3002"
