--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-router-dom": "5.0.1",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0",
+    "socket.io-client": "2.2.0",
     "uuid": "3.3.2",
     "webpack": "4.35.2",
     "webpack-cli": "3.3.5",
