--- a/package.json
+++ b/package.json
@@ -17,11 +17,26 @@
     "start": "node src/server/app.js",
     "test": "run-s test:**",
     "test:server": "eslint ./src/server",
-    "test:client": "eslint  --ext js --ext jsx ./src/client",
+    "test:client": "eslint --ext js --ext jsx ./src/client",
     "test:lint-styles": "stylelint \"src/client/**/*.pcss\"",
     "development": "nodemon --watch src/server --watch src/client/webpack.dev.config.js src/server/app.js",
     "add-contributor": "all-contributors add",
     "generate-contributors": "all-contributors generate"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "eslint --ext js --ext jsx",
+      "git add"
+    ],
+    "*.pcss": [
+      "stylelint",
+      "git add"
+    ]
   },
   "dependencies": {
     "@paralect/common-logger": "0.1.10",
@@ -88,6 +103,8 @@
     "eslint-plugin-import": "2.19.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.17.0",
+    "husky": "4.0.0-beta.5",
+    "lint-staged": "9.5.0",
     "mini-css-extract-plugin": "0.8.0",
     "npm-run-all": "4.1.5",
     "postcss-loader": "3.0.0",
