get rid of prettier. Use airbnb eslint config

--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "test:client": "eslint  --ext js --ext jsx ./src/client",
     "test:lint-styles": "stylelint \"src/client/**/*.pcss\"",
     "development": "nodemon --watch src/server --watch src/client/webpack.dev.config.js src/server/app.js",
-    "format": "prettier-eslint --write \"src/**/*.?(js|jsx)\"",
     "add-contributor": "all-contributors add",
     "generate-contributors": "all-contributors generate"
   },
@@ -77,22 +76,21 @@
     "@babel/polyfill": "7.4.4",
     "@babel/preset-env": "7.5.4",
     "@babel/preset-react": "7.0.0",
-    "@paralect/eslint-config": "1.1.0",
     "all-contributors-cli": "6.8.0",
-    "babel-eslint": "10.0.2",
+    "babel-eslint": "10.0.3",
     "babel-loader": "8.0.6",
     "babel-plugin-inline-react-svg": "1.1.0",
     "babel-plugin-module-resolver": "3.2.0",
     "babel-plugin-react-css-modules": "5.2.6",
     "css-loader": "3.0.0",
-    "eslint": "6.0.1",
-    "eslint-plugin-import": "2.18.0",
+    "eslint": "6.7.2",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-plugin-import": "2.19.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.14.2",
+    "eslint-plugin-react": "7.17.0",
     "mini-css-extract-plugin": "0.8.0",
     "npm-run-all": "4.1.5",
     "postcss-loader": "3.0.0",
-    "prettier-eslint-cli": "5.0.0",
     "style-loader": "0.23.1",
     "stylelint": "10.1.0",
     "stylelint-config-standard": "18.3.0",
