--- a/package.json
+++ b/package.json
@@ -6,19 +6,25 @@
   "main": "src/server/app.js",
   "author": "Paralect",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/paralect/koa-react-starter.git"
+  },
   "keywords": [
     "koa",
     "react",
     "redux",
     "paralect"
   ],
+  "engines": {
+    "node": ">= 8"
+  },
   "scripts": {
-    "build-client": "webpack -p --config src/client/webpack.config.js",
+    "build": "webpack -p --config src/client/webpack.config.js",
     "start": "node src/server/app.js",
     "test": "run-s test:**",
-    "test:server": "eslint ./src/server",
-    "test:client": "eslint --ext js --ext jsx ./src/client",
-    "test:lint-styles": "stylelint \"src/client/**/*.pcss\"",
+    "test:eslint": "eslint --fix --ext js --ext jsx ./src",
+    "test:stylelint": "stylelint --fix \"./src/client/**/*.pcss\"",
     "development": "nodemon --watch src/server --watch src/client/webpack.dev.config.js src/server/app.js",
     "add-contributor": "all-contributors add",
     "generate-contributors": "all-contributors generate"
@@ -30,57 +36,44 @@
   },
   "lint-staged": {
     "*.{js,jsx}": [
-      "eslint --ext js --ext jsx",
-      "git add"
+      "eslint --ext js --ext jsx"
     ],
     "*.pcss": [
-      "stylelint",
-      "git add"
+      "stylelint"
     ]
   },
   "dependencies": {
+    "@koa/router": "8.0.8",
     "@paralect/common-logger": "0.1.10",
     "app-module-path": "2.2.0",
-    "axios": "0.18.1",
-    "babel-plugin-lodash": "3.3.4",
+    "axios": "0.19.2",
     "classnames": "2.2.6",
-    "connected-react-router": "6.5.2",
-    "cssnano": "4.1.10",
-    "file-loader": "4.0.0",
-    "handlebars": "4.1.2",
-    "history": "4.9.0",
-    "html-webpack-plugin": "3.2.0",
-    "incstr": "1.2.3",
-    "koa": "2.7.0",
+    "core-js": "3.6.5",
+    "handlebars": "4.7.6",
+    "history": "4.10.1",
+    "koa": "2.11.0",
     "koa-logger": "3.2.1",
     "koa-mount": "4.0.0",
-    "koa-router": "7.4.0",
     "koa-static": "5.0.0",
-    "koa-views": "6.2.0",
-    "koa-webpack": "5.2.4",
-    "lodash": "4.17.14",
-    "lodash-webpack-plugin": "0.11.5",
-    "nodemon": "1.19.1",
-    "normalize.css": "8.0.1",
-    "postcss-import": "12.0.1",
-    "postcss-nested": "4.1.2",
-    "postcss-preset-env": "6.7.0",
+    "koa-views": "6.2.1",
+    "koa-webpack": "5.3.0",
+    "lodash": "4.17.15",
+    "nanoid": "3.1.5",
     "prop-types": "15.7.2",
-    "qs": "6.9.1",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
+    "qs": "6.9.4",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-hot-loader": "4.12.7",
-    "react-icon-base": "2.1.2",
-    "react-icons": "3.7.0",
-    "react-redux": "7.1.0",
+    "react-redux": "7.2.0",
+    "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "redux": "4.0.4",
+    "redux": "4.0.5",
     "redux-thunk": "2.3.0",
-    "socket.io-client": "2.2.0",
-    "uuid": "3.3.2",
-    "webpack": "4.35.3",
-    "webpack-cli": "3.3.6",
-    "yup": "0.27.0"
+    "regenerator-runtime": "0.13.5",
+    "socket.io-client": "2.3.0",
+    "webpack": "4.43.0",
+    "webpack-cli": "3.3.11",
+    "yup": "0.28.5"
   },
   "devDependencies": {
     "@babel/cli": "7.5.0",
@@ -103,22 +96,24 @@
     "eslint-config-airbnb": "18.0.1",
     "eslint-plugin-import": "2.19.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.17.0",
-    "husky": "4.0.0-beta.5",
-    "lint-staged": "9.5.0",
-    "mini-css-extract-plugin": "0.8.0",
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react-hooks": "2.5.0",
+    "file-loader": "6.0.0",
+    "html-webpack-plugin": "4.3.0",
+    "husky": "4.2.5",
+    "lint-staged": "10.2.2",
+    "lodash-webpack-plugin": "0.11.5",
+    "mini-css-extract-plugin": "0.9.0",
+    "nodemon": "2.0.3",
+    "normalize.css": "8.0.1",
     "npm-run-all": "4.1.5",
+    "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
-    "style-loader": "0.23.1",
-    "stylelint": "10.1.0",
-    "stylelint-config-standard": "18.3.0",
-    "url-loader": "2.0.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/paralect/koa-react-starter.git"
-  },
-  "engines": {
-    "node": ">= 6"
+    "postcss-nested": "4.2.1",
+    "postcss-preset-env": "6.7.0",
+    "style-loader": "1.2.1",
+    "stylelint": "13.3.3",
+    "stylelint-config-standard": "20.0.0",
+    "url-loader": "4.1.0"
   }
 }
