--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,8 @@
     [
       "@babel/preset-env",
       {
-        "modules": false
+        "corejs": 3,
+        "useBuiltIns": "entry"
       }
     ],
     "@babel/preset-react"
