--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
   },
   "lint-staged": {
     "*.{js,jsx}": [
-      "eslint --ext js --ext jsx"
+      "eslint --ext js --ext jsx --fix"
     ],
     "*.pcss": [
-      "stylelint"
+      "stylelint --fix"
     ]
   },
   "dependencies": {
@@ -59,6 +59,7 @@
     "koa-mount": "4.0.0",
     "koa-static": "5.0.0",
     "koa-views": "6.3.0",
+    "koa-webpack": "5.3.0",
     "lodash": "4.17.15",
     "prop-types": "15.7.2",
     "qs": "6.9.4",
@@ -74,6 +75,7 @@
     "regenerator-runtime": "0.13.5",
     "socket.io-client": "2.3.0",
     "uuid": "8.1.0",
+    "webpack": "4.43.0",
     "yup": "0.29.1"
   },
   "devDependencies": {
@@ -103,7 +105,6 @@
     "file-loader": "6.0.0",
     "html-webpack-plugin": "4.3.0",
     "husky": "4.2.5",
-    "koa-webpack": "5.3.0",
     "lint-staged": "10.2.11",
     "lodash-webpack-plugin": "0.11.5",
     "mini-css-extract-plugin": "0.9.0",
@@ -118,7 +119,6 @@
     "stylelint": "13.6.1",
     "stylelint-config-standard": "20.0.0",
     "url-loader": "4.1.0",
-    "webpack": "4.43.0",
     "webpack-cli": "3.3.12"
   }
 }
