--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test": "run-s test:**",
     "test:eslint": "eslint --ext js --ext jsx ./src",
     "test:stylelint": "stylelint \"src/**/*.pcss\"",
-    "build": "webpack -p"
+    "build": "webpack -p",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "husky": {
     "hooks": {
@@ -62,6 +64,10 @@
     "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "7.12.1",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
+    "@storybook/addon-actions": "6.1.15",
+    "@storybook/addon-essentials": "6.1.15",
+    "@storybook/addon-links": "6.1.15",
+    "@storybook/react": "6.1.15",
     "@svgr/webpack": "5.4.0",
     "babel-loader": "8.1.0",
     "babel-plugin-module-resolver": "4.0.0",
