--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
   "rules": {
     "arrow-body-style": 0,
     "no-underscore-dangle": 0,
+    "react/jsx-props-no-spreading": 0,
     "no-restricted-imports": ["error", {
       "name": "lodash",
       "message": "Import individual methods from the Lodash module"
