--- a/package.json
+++ b/package.json
@@ -21,7 +21,16 @@
     "test:stylelint": "stylelint \"src/**/*.pcss\"",
     "build": "webpack -p",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "eslint --ext js --ext jsx --fix"
+    ],
+    "*.pcss": [
+      "stylelint --fix"
+    ]
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.5.1",
@@ -67,6 +76,8 @@
     "eslint-plugin-react": "7.23.2",
     "eslint-plugin-react-hooks": "4.2.0",
     "html-webpack-plugin": "5.3.1",
+    "husky": "6.0.0",
+    "lint-staged": "11.0.0",
     "mini-css-extract-plugin": "1.6.0",
     "npm-run-all": "4.1.5",
     "postcss-import": "14.0.2",
