--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "test:stylelint": "stylelint \"src/**/*.pcss\"",
     "build": "webpack -p",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "prepare": "husky install"
+    "build-storybook": "build-storybook"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "*.{js,jsx}": [
@@ -77,11 +81,11 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "html-webpack-plugin": "5.3.1",
     "husky": "6.0.0",
-    "lint-staged": "11.0.0",
+    "lint-staged": "10.4.2",
     "mini-css-extract-plugin": "1.6.0",
     "npm-run-all": "4.1.5",
     "postcss-import": "14.0.2",
-    "postcss-loader": "5.2.0",
+    "postcss-loader": "4.2.0",
     "postcss-nested": "5.0.5",
     "postcss-preset-env": "6.7.0",
     "react-refresh": "0.9.0",
