--- a/package.json
+++ b/package.json
@@ -21,20 +21,8 @@
     "test:stylelint": "stylelint \"src/**/*.pcss\"",
     "build": "webpack -p",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,jsx}": [
-      "eslint --ext js --ext jsx --fix"
-    ],
-    "*.pcss": [
-      "stylelint --fix"
-    ]
+    "build-storybook": "build-storybook",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.5.1",
@@ -82,7 +70,7 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "html-webpack-plugin": "5.3.1",
     "husky": "6.0.0",
-    "lint-staged": "10.4.2",
+    "lint-staged": "11.0.0",
     "mini-css-extract-plugin": "1.6.0",
     "npm-run-all": "4.1.5",
     "postcss-import": "14.0.2",
@@ -96,5 +84,13 @@
     "url-loader": "4.1.1",
     "webpack-cli": "4.7.0",
     "webpack-dev-server": "3.11.2"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "eslint --ext js --ext jsx --fix"
+    ],
+    "*.pcss": [
+      "stylelint --fix"
+    ]
   }
 }
