--- a/package.json
+++ b/package.json
@@ -51,11 +51,12 @@
     "@babel/preset-env": "7.14.2",
     "@babel/preset-react": "7.13.13",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
-    "@storybook/addon-actions": "6.3.0-alpha.27",
-    "@storybook/addon-essentials": "6.3.0-alpha.27",
-    "@storybook/addon-links": "6.3.0-alpha.27",
-    "@storybook/builder-webpack5": "6.3.0-alpha.27",
-    "@storybook/react": "6.3.0-alpha.27",
+    "@storybook/addon-actions": "6.3.6",
+    "@storybook/addon-essentials": "6.3.6",
+    "@storybook/addon-links": "6.3.6",
+    "@storybook/builder-webpack5": "6.4.0-alpha.26",
+    "@storybook/manager-webpack5": "6.4.0-alpha.26",
+    "@storybook/react": "6.3.6",
     "@svgr/webpack": "5.5.0",
     "babel-loader": "8.2.2",
     "babel-plugin-module-resolver": "4.1.0",
