--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-redux": "7.2.4",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
+    "react-select": "4.3.1",
     "regenerator-runtime": "0.13.7",
     "socket.io-client": "4.1.1",
     "webpack": "5.37.0",
