Add Modal Component

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-datepicker": "4.2.0",
     "react-dom": "16.14.0",
     "react-dropzone": "11.3.4",
+    "react-modal": "3.14.3",
     "react-redux": "7.2.4",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
