--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "history": "4.10.1",
     "lodash": "4.17.21",
     "normalize.css": "8.0.1",
+    "postcss": "8.3.6",
     "prop-types": "15.7.2",
     "qs": "6.10.1",
     "react": "16.14.0",
