Add Chromatic support (#117)

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "build": "webpack -p",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "chromatic": "npx chromatic --project-token=CHROMATIC_PROJECT_TOKEN"
   },
   "dependencies": {
     "@hookform/resolvers": "2.8.0",
@@ -33,6 +34,7 @@
     "history": "4.10.1",
     "lodash": "4.17.21",
     "normalize.css": "8.0.1",
+    "postcss": "8.3.6",
     "prop-types": "15.7.2",
     "qs": "6.10.1",
     "react": "16.14.0",
@@ -57,15 +59,16 @@
     "@babel/preset-env": "7.14.2",
     "@babel/preset-react": "7.13.13",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
-    "@storybook/addon-actions": "6.3.6",
-    "@storybook/addon-essentials": "6.3.6",
-    "@storybook/addon-links": "6.3.6",
-    "@storybook/builder-webpack5": "6.4.0-alpha.26",
-    "@storybook/manager-webpack5": "6.4.0-alpha.26",
-    "@storybook/react": "6.3.6",
+    "@storybook/addon-actions": "6.4.0-alpha.32",
+    "@storybook/addon-essentials": "6.4.0-alpha.32",
+    "@storybook/addon-links": "6.4.0-alpha.32",
+    "@storybook/builder-webpack5": "6.4.0-alpha.32",
+    "@storybook/manager-webpack5": "6.4.0-alpha.32",
+    "@storybook/react": "6.4.0-alpha.32",
     "@svgr/webpack": "5.5.0",
     "babel-loader": "8.2.2",
     "babel-plugin-module-resolver": "4.1.0",
+    "chromatic": "5.9.2",
     "copy-webpack-plugin": "8.1.1",
     "css-loader": "5.2.4",
     "cssnano": "5.0.2",
