--- a/package.json
+++ b/package.json
@@ -61,12 +61,13 @@
     "@babel/preset-env": "7.15.0",
     "@babel/preset-react": "7.14.5",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
-    "@storybook/addon-actions": "6.4.0-alpha.32",
-    "@storybook/addon-essentials": "6.4.0-alpha.32",
-    "@storybook/addon-links": "6.4.0-alpha.32",
-    "@storybook/builder-webpack5": "6.4.0-alpha.32",
-    "@storybook/manager-webpack5": "6.4.0-alpha.32",
-    "@storybook/react": "6.4.0-alpha.32",
+    "@storybook/addon-actions": "6.4.0-alpha.33",
+    "@storybook/addon-docs": "6.4.0-alpha.33",
+    "@storybook/addon-essentials": "6.4.0-alpha.33",
+    "@storybook/addon-links": "6.4.0-alpha.33",
+    "@storybook/builder-webpack5": "6.4.0-alpha.33",
+    "@storybook/manager-webpack5": "6.4.0-alpha.33",
+    "@storybook/react": "6.4.0-alpha.33",
     "@svgr/webpack": "5.5.0",
     "babel-loader": "8.2.2",
     "babel-plugin-module-resolver": "4.1.0",
