--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@hookform/resolvers": "2.8.0",
     "@reduxjs/toolkit": "1.6.1",
+    "@sentry/browser": "6.13.2",
     "axios": "0.21.1",
     "classnames": "2.3.1",
     "core-js": "3.16.4",
