--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,8 +1,10 @@
 {
   "extends": "stylelint-config-standard",
   "rules": {
-    "font-family-no-missing-generic-family-keyword": [true, 
+    "font-family-no-missing-generic-family-keyword": [
+      true,
       { "ignoreFontFamilies": ["Inter"] }
-    ]
+    ],
+    "no-descending-specificity": null
   }
 }
