feat: add file upload component

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "classnames": "2.3.1",
     "core-js": "3.16.4",
     "history": "4.10.1",
+    "html5-file-selector": "2.1.0",
     "lodash": "4.17.21",
     "postcss": "8.3.6",
     "prop-types": "15.7.2",
@@ -41,6 +42,7 @@
     "react-datepicker": "4.2.1",
     "react-dom": "17.0.2",
     "react-dropzone": "11.3.4",
+    "react-dropzone-uploader-with-credentials": "1.0.0",
     "react-hook-form": "7.14.2",
     "react-modal": "3.14.3",
     "react-redux": "7.2.4",
